Added a bunch of things

--- a/server/scoutmaster.conf
+++ b/server/scoutmaster.conf
@@ -1,5 +1,5 @@
 {
-	"db" : "sqlite:///database.db",
+	"db" : "mongodb://localhost:9002/",
 	"default_admin" : 
 	{
 		"user" : "admin",
@@ -8,8 +8,54 @@
 	"secret_key" : "bannanas",
 	"debug" : false,
 	"year" : 2014,
-	"review_format" : 
+	"personal_review" : 
 	{
+		"basic_info" :
+		{
+			"title" : "Basic Information",
+			"fields" : 
+			{
+				"text field" : ["Username"]
+			}
+		},
+		"robot_info" :
+		{
+			"title" : "The Robot",
+			"fields" :
+			{
+				"checkbox" : 
+				{
+					"Specialty" : ["Bin Stacker", "Tote Stacker", "Noodler"]
+				},
+				"text field" : ["Mechanisms", "Drive System", "Additional Comments"]
+			}
+		},
+		"strategy_info" :
+		{
 
+		}
+	}
+	"match_review" :
+	{
+		"basic_info" :
+		{
+			"title" : "Basic Information",
+			"fields" : 
+			{
+				"text field" : ["Username", "Match Number"]
+			}
+		},
+		"performance_info" : 
+		{
+			"title" : "Performance",
+			"fields" :
+			{
+				""
+			}
+		},
+		"strategy_info" :
+		{
+			"title" : "Strategy",
+		}
 	}
 }
